<resources>
    //Description string
    <string name="app_name">LimerickVirtualGuide</string>

    //Menu options
    <string name="action_settings">Menu</string>
    <string name="menu_about">About</string>
    <string name="menu_events">Events</string>
    <string name="menu_walking">Walking Routes</string>

    //Activity Screens title
    <string name="title_activity">Limerick Virtual Guide</string>

    <string name="hello_world">Hello world!</string>
    //Screen 2_1 buttons
    <string name="medievalRoute">Medieval Route</string>
    <string name="georgianRoute">Georgian Route</string>
    <string name="riverShannon">River Shannon Trail</string>

    //Screen 3_1 buttons
    <string name="entButton">Entertainment</string>
    <string name="artButton">Art and Culture</string>
    <string name="sportButton">Sport</string>
    <string name="kidsButton">Kids</string>
    <string name="allEvents">All Events</string>

    //About screen content
    <string name="aboutApp">
About App\n\nLimerick Virtual Guide ver. 1.0\n\nMobile software application to support tourism in Limerick City. This application supports walking routes to historical places and guides to
up to date local events.\n\nDevelopers:\nNiamh Brennan\nAdam Filipczyk\nLorna Loftus
    </string>

</resources>
