<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.administrator.limerickvirtualguide.screen3_1">

    <include
        android:id="@+id/app_toolbar"
        layout="@layout/app_toolbar" />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/entButton"
        android:id="@+id/ent_button"
        android:layout_below="@+id/app_toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:clickable="true"
        android:textColor="@color/primaryColor"
        android:textStyle="bold" />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/artButton"
        android:id="@+id/art_button"
        android:layout_below="@+id/ent_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:clickable="true"
        android:textColor="@color/primaryColor"
        android:textStyle="bold" />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/sportButton"
        android:id="@+id/sport_button"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textColor="@color/primaryColor"
        android:clickable="true"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/art_button" />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/kidsButton"
        android:id="@+id/kids_button"
        android:layout_below="@+id/sport_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:clickable="true"
        android:textColor="@color/primaryColor"
        android:textStyle="bold" />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/allEvents"
        android:id="@+id/all_ev_button"
        android:layout_below="@+id/kids_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:textColor="@color/primaryColor" />

</RelativeLayout>
